--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.datasource.username=root
-spring.datasource.password=argatw
-spring.datasource.url=jdbc:mysql://localhost:3306/cpDatabase
+# spring.datasource.username=root
+# spring.datasource.password=argatw
+# spring.datasource.url=jdbc:mysql://localhost:3306/cpDatabase
+
+# # spring.datasource.username=root
+# # spring.datasource.password=argatw
+# # spring.datasource.url=jdbc:mysql://localhost:3306/db1
+spring.datasource.url=jdbc:mysql://@mydb-do-user-11291420-0.b.db.ondigitalocean.com:25060/cpDatabase?ssl-mode=REQUIRED
+spring.datasource.username=doadmin
+spring.datasource.password=AVNS_X2BMH03Zisfwzea
 
